Adding random colors to objects

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <div class="header">
         <h2>THE GREAT</h2>
-        <h1 id="randomColor">RGB(255, 255, 255)</h1>
+        <h1 id="randomColor">RGB(<span class="rgbColor">255</span>, <span class="rgbColor">255</span>, <span class="rgbColor">255</span>)</h1>
         <h2>GUESSING GAME</h2>
     </div>
 
     <nav>
         <div class="container">
-            <a href="#">NEW COLORS</a>
+            <a href="#" id="newColors">NEW COLORS</a>
             <span>Try Again</span>
-            <a href="#">EASY</a>
-            <a href="#">HARD</a>
+            <a href="#" id="easy">EASY</a>
+            <a href="#" id="hard">HARD</a>
         </div>
     </nav>
 
@@ -28,9 +28,9 @@
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
-        <div class="square hard"></div>
-        <div class="square hard"></div>
-        <div class="square hard"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
     </div>
 
     <script src="resources/js/script.js"></script>
