Added functions to set up game

--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
         </div>
     </nav>
 
-    <div class="content container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-    </div>
+    <div id="content" class="container"></div>
 
     <script src="resources/js/script.js"></script>
 </body>
