--- a/index.html
+++ b/index.html
@@ -11,24 +11,16 @@
 <body>
     <div id="header">
         <h2>THE GREAT</h2>
-        <h1 id="colorValue">RGB(<span class="rgbColor">255</span>, <span class="rgbColor">255</span>, <span class="rgbColor">255</span>)</h1>
+        <h1 id="colorValue">RGB(255, 255, 255)</h1>
         <h2>GUESSING GAME</h2>
     </div>
 
     <nav>
-        <div class="container">
-            <div class="col">
-                <a href="#" id="newColors">NEW COLORS</a>
-            </div>
-
-            <div class="col">
-                <span id="tryAgain"></span>
-            </div>
-            
-            <div class="col">
-                <a href="#" id="easy">EASY</a>
-                <a href="#" id="hard">HARD</a>
-            </div>
+        <div class="stripe">
+                <button id="newColors">NEW COLORS</button>
+                <span id="message"></span>
+                <button id="easy">EASY</button>
+                <button id="hard" class="selected">HARD</button>
         </div>
     </nav>
 
